--- a/v2/flex.css
+++ b/v2/flex.css
@@ -1,39 +1,42 @@
 .d-flex {
-  display: flex;
+  display: flex !important;
 }
 
-.jc-center {
-  justify-content: center;
+.jc-c {
+  justify-content: start !important;
 }
-
-.jc-start {
-  justify-content: start;
+.jc-s {
+  justify-content: center !important;
 }
-
-.jc-end {
-  justify-content: end;
+.jc-e {
+  justify-content: end !important;
+}
+.jc-sb {
+  justify-content: space-between !important;
+}
+.jc-se {
+  justify-content: space-evenly !important;
+}
+.jc-sa {
+  justify-content: space-around !important;
 }
 
 .flex-wrap {
   flex-wrap: wrap !important;
 }
-
 .flex-nowrap {
   flex-wrap: nowrap !important;
 }
 
-.fd-column {
-  flex-direction: column;
+.fd-c {
+  flex-direction: column !important;
 }
-
-.fd-row {
-  flex-direction: row;
+.fd-r {
+  flex-direction: row !important;
 }
-
-.fd-column-reverse {
-  flex-direction: column-reverse;
+.fd-cr {
+  flex-direction: column-reverse !important;
 }
-
-.fd-row-reverse {
-  flex-direction: row-reverse;
+.fd-rr {
+  flex-direction: row-reverse !important;
 }
