--- a/v2/sidebar.css
+++ b/v2/sidebar.css
@@ -13,55 +13,56 @@
   box-shadow: 0px 8px 16px 0px #2c3e5055;
 }
 
-.sidebar-nav {
+.sidebar .links {
   display: flex;
+  padding-top: 1rem;
   flex-direction: column;
 }
 
-.sidebar-link {
+.sidebar .link {
   color: inherit;
   padding: 0.25rem 1.5rem;
   transition: all 0.3s;
 }
 
-.sidebar-link:hover {
+.sidebar .link:hover {
   color: var(--bg-primary);
   background-color: color-mix(in srgb, var(--c-primary) 50%, var(--bg-primary));
 }
-.sidebar-link.active {
+.sidebar .link.active {
   color: var(--c-primary);
   background-color: color-mix(in srgb, var(--c-primary) 25%, var(--bg-primary));
 }
-.sidebar-divider {
+.sidebar .divider {
   color: color-mix(in srgb, var(--c-primary) 75%, transparent);
   padding: 0.25rem 0;
   display: flex;
   align-items: center;
   cursor: default;
 }
-.sidebar-divider::before {
+.sidebar .divider::before {
   content: "";
   flex: 0.2;
   border-top: 0.1rem solid color-mix(in srgb, var(--c-primary) 25%, transparent);
   margin-right: 1rem;
 }
-.sidebar-divider::after {
+.sidebar .divider::after {
   content: "";
   flex: 1;
   border-top: 0.1rem solid color-mix(in srgb, var(--c-primary) 25%, transparent);
   margin-left: 1rem;
 }
 
-.sidebar-right .sidebar {
+.sidebar-porvider.right .sidebar {
   left: unset;
   right: 0;
 }
 
-.content {
+.sidebar-porvider .content {
   min-height: 100svh;
   max-width: 82rem;
-  margin: 0 auto 0 19rem;
+  margin: 0 2rem 0 19rem;
 }
-.sidebar-right .content {
-  margin: 0 19rem 0 auto;
+.sidebar-porvider.right .content {
+  margin: 0 19rem 0 2rem;
 }
