--- a/v2/flex.css
+++ b/v2/flex.css
@@ -40,3 +40,34 @@
 .fd-rr {
   flex-direction: row-reverse !important;
 }
+
+.gap-1 {
+  gap: 0.5rem;
+}
+.gap-2 {
+  gap: 1rem;
+}
+.gap-3 {
+  gap: 1.5rem;
+}
+.gap-4 {
+  gap: 2rem;
+}
+.gap-5 {
+  gap: 2.5rem;
+}
+.gap-6 {
+  gap: 3rem;
+}
+.gap-7 {
+  gap: 3.5rem;
+}
+.gap-8 {
+  gap: 4rem;
+}
+.gap-9 {
+  gap: 4.5rem;
+}
+.gap-10 {
+  gap: 5rem;
+}
