--- a/v2/sidebar.css
+++ b/v2/sidebar.css
@@ -60,7 +60,7 @@
 
 .sidebar-porvider .content {
   min-height: 100svh;
-  max-width: 82rem;
+  width: 100%;
   margin: 0 2rem 0 19rem;
 }
 .sidebar-porvider.right .content {
