--- a/v2/flex.css
+++ b/v2/flex.css
@@ -42,32 +42,32 @@
 }
 
 .gap-1 {
-  gap: 0.5rem;
+  gap: 0.5rem !important;
 }
 .gap-2 {
-  gap: 1rem;
+  gap: 1rem !important;
 }
 .gap-3 {
-  gap: 1.5rem;
+  gap: 1.5rem !important;
 }
 .gap-4 {
-  gap: 2rem;
+  gap: 2rem !important;
 }
 .gap-5 {
-  gap: 2.5rem;
+  gap: 2.5rem !important;
 }
 .gap-6 {
-  gap: 3rem;
+  gap: 3rem !important;
 }
 .gap-7 {
-  gap: 3.5rem;
+  gap: 3.5rem !important;
 }
 .gap-8 {
-  gap: 4rem;
+  gap: 4rem !important;
 }
 .gap-9 {
-  gap: 4.5rem;
+  gap: 4.5rem !important;
 }
 .gap-10 {
-  gap: 5rem;
+  gap: 5rem !important;
 }
