--- a/v2/margin.css
+++ b/v2/margin.css
@@ -1,460 +1,460 @@
 .m-1 {
-  margin: 0.5rem;
+  margin: 0.5rem !important;
 }
 .m-2 {
-  margin: 1rem;
+  margin: 1rem !important;
 }
 .m-3 {
-  margin: 1.5rem;
+  margin: 1.5rem !important;
 }
 .m-4 {
-  margin: 2rem;
+  margin: 2rem !important;
 }
 .m-5 {
-  margin: 2.5rem;
+  margin: 2.5rem !important;
 }
 .m-6 {
-  margin: 3rem;
+  margin: 3rem !important;
 }
 .m-7 {
-  margin: 3.5rem;
+  margin: 3.5rem !important;
 }
 .m-8 {
-  margin: 4rem;
+  margin: 4rem !important;
 }
 .m-9 {
-  margin: 4.5rem;
+  margin: 4.5rem !important;
 }
 .m-10 {
-  margin: 5rem;
+  margin: 5rem !important;
 }
 .m-11 {
-  margin: 5.5rem;
+  margin: 5.5rem !important;
 }
 .m-12 {
-  margin: 6rem;
+  margin: 6rem !important;
 }
 .m-13 {
-  margin: 6.5rem;
+  margin: 6.5rem !important;
 }
 .m-14 {
-  margin: 7rem;
+  margin: 7rem !important;
 }
 .m-15 {
-  margin: 7.5rem;
+  margin: 7.5rem !important;
 }
 .m-16 {
-  margin: 8rem;
+  margin: 8rem !important;
 }
 .m-17 {
-  margin: 8.5rem;
+  margin: 8.5rem !important;
 }
 .m-18 {
-  margin: 9rem;
+  margin: 9rem !important;
 }
 .m-19 {
-  margin: 9.5rem;
+  margin: 9.5rem !important;
 }
 .m-20 {
-  margin: 10rem;
+  margin: 10rem !important;
 }
 .mt-1 {
-  margin-top: 0.5rem;
+  margin-top: 0.5rem !important;
 }
 .mt-2 {
-  margin-top: 1rem;
+  margin-top: 1rem !important;
 }
 .mt-3 {
-  margin-top: 1.5rem;
+  margin-top: 1.5rem !important;
 }
 .mt-4 {
-  margin-top: 2rem;
+  margin-top: 2rem !important;
 }
 .mt-5 {
-  margin-top: 2.5rem;
+  margin-top: 2.5rem !important;
 }
 .mt-6 {
-  margin-top: 3rem;
+  margin-top: 3rem !important;
 }
 .mt-7 {
-  margin-top: 3.5rem;
+  margin-top: 3.5rem !important;
 }
 .mt-8 {
-  margin-top: 4rem;
+  margin-top: 4rem !important;
 }
 .mt-9 {
-  margin-top: 4.5rem;
+  margin-top: 4.5rem !important;
 }
 .mt-10 {
-  margin-top: 5rem;
+  margin-top: 5rem !important;
 }
 .mt-11 {
-  margin-top: 5.5rem;
+  margin-top: 5.5rem !important;
 }
 .mt-12 {
-  margin-top: 6rem;
+  margin-top: 6rem !important;
 }
 .mt-13 {
-  margin-top: 6.5rem;
+  margin-top: 6.5rem !important;
 }
 .mt-14 {
-  margin-top: 7rem;
+  margin-top: 7rem !important;
 }
 .mt-15 {
-  margin-top: 7.5rem;
+  margin-top: 7.5rem !important;
 }
 .mt-16 {
-  margin-top: 8rem;
+  margin-top: 8rem !important;
 }
 .mt-17 {
-  margin-top: 8.5rem;
+  margin-top: 8.5rem !important;
 }
 .mt-18 {
-  margin-top: 9rem;
+  margin-top: 9rem !important;
 }
 .mt-19 {
-  margin-top: 9.5rem;
+  margin-top: 9.5rem !important;
 }
 .mt-20 {
-  margin-top: 10rem;
+  margin-top: 10rem !important;
 }
 .mb-1 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem !important;
 }
 .mb-2 {
-  margin-bottom: 1rem;
+  margin-bottom: 1rem !important;
 }
 .mb-3 {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem !important;
 }
 .mb-4 {
-  margin-bottom: 2rem;
+  margin-bottom: 2rem !important;
 }
 .mb-5 {
-  margin-bottom: 2.5rem;
+  margin-bottom: 2.5rem !important;
 }
 .mb-6 {
-  margin-bottom: 3rem;
+  margin-bottom: 3rem !important;
 }
 .mb-7 {
-  margin-bottom: 3.5rem;
+  margin-bottom: 3.5rem !important;
 }
 .mb-8 {
-  margin-bottom: 4rem;
+  margin-bottom: 4rem !important;
 }
 .mb-9 {
-  margin-bottom: 4.5rem;
+  margin-bottom: 4.5rem !important;
 }
 .mb-10 {
-  margin-bottom: 5rem;
+  margin-bottom: 5rem !important;
 }
 .mb-11 {
-  margin-bottom: 5.5rem;
+  margin-bottom: 5.5rem !important;
 }
 .mb-12 {
-  margin-bottom: 6rem;
+  margin-bottom: 6rem !important;
 }
 .mb-13 {
-  margin-bottom: 6.5rem;
+  margin-bottom: 6.5rem !important;
 }
 .mb-14 {
-  margin-bottom: 7rem;
+  margin-bottom: 7rem !important;
 }
 .mb-15 {
-  margin-bottom: 7.5rem;
+  margin-bottom: 7.5rem !important;
 }
 .mb-16 {
-  margin-bottom: 8rem;
+  margin-bottom: 8rem !important;
 }
 .mb-17 {
-  margin-bottom: 8.5rem;
+  margin-bottom: 8.5rem !important;
 }
 .mb-18 {
-  margin-bottom: 9rem;
+  margin-bottom: 9rem !important;
 }
 .mb-19 {
-  margin-bottom: 9.5rem;
+  margin-bottom: 9.5rem !important;
 }
 .mb-20 {
-  margin-bottom: 10rem;
+  margin-bottom: 10rem !important;
 }
 .mr-1 {
-  margin-right: 0.5rem;
+  margin-right: 0.5rem !important;
 }
 .mr-2 {
-  margin-right: 1rem;
+  margin-right: 1rem !important;
 }
 .mr-3 {
-  margin-right: 1.5rem;
+  margin-right: 1.5rem !important;
 }
 .mr-4 {
-  margin-right: 2rem;
+  margin-right: 2rem !important;
 }
 .mr-5 {
-  margin-right: 2.5rem;
+  margin-right: 2.5rem !important;
 }
 .mr-6 {
-  margin-right: 3rem;
+  margin-right: 3rem !important;
 }
 .mr-7 {
-  margin-right: 3.5rem;
+  margin-right: 3.5rem !important;
 }
 .mr-8 {
-  margin-right: 4rem;
+  margin-right: 4rem !important;
 }
 .mr-9 {
-  margin-right: 4.5rem;
+  margin-right: 4.5rem !important;
 }
 .mr-10 {
-  margin-right: 5rem;
+  margin-right: 5rem !important;
 }
 .mr-11 {
-  margin-right: 5.5rem;
+  margin-right: 5.5rem !important;
 }
 .mr-12 {
-  margin-right: 6rem;
+  margin-right: 6rem !important;
 }
 .mr-13 {
-  margin-right: 6.5rem;
+  margin-right: 6.5rem !important;
 }
 .mr-14 {
-  margin-right: 7rem;
+  margin-right: 7rem !important;
 }
 .mr-15 {
-  margin-right: 7.5rem;
+  margin-right: 7.5rem !important;
 }
 .mr-16 {
-  margin-right: 8rem;
+  margin-right: 8rem !important;
 }
 .mr-17 {
-  margin-right: 8.5rem;
+  margin-right: 8.5rem !important;
 }
 .mr-18 {
-  margin-right: 9rem;
+  margin-right: 9rem !important;
 }
 .mr-19 {
-  margin-right: 9.5rem;
+  margin-right: 9.5rem !important;
 }
 .mr-20 {
-  margin-right: 10rem;
+  margin-right: 10rem !important;
 }
 .ml-1 {
-  margin-left: 0.5rem;
+  margin-left: 0.5rem !important;
 }
 .ml-2 {
-  margin-left: 1rem;
+  margin-left: 1rem !important;
 }
 .ml-3 {
-  margin-left: 1.5rem;
+  margin-left: 1.5rem !important;
 }
 .ml-4 {
-  margin-left: 2rem;
+  margin-left: 2rem !important;
 }
 .ml-5 {
-  margin-left: 2.5rem;
+  margin-left: 2.5rem !important;
 }
 .ml-6 {
-  margin-left: 3rem;
+  margin-left: 3rem !important;
 }
 .ml-7 {
-  margin-left: 3.5rem;
+  margin-left: 3.5rem !important;
 }
 .ml-8 {
-  margin-left: 4rem;
+  margin-left: 4rem !important;
 }
 .ml-9 {
-  margin-left: 4.5rem;
+  margin-left: 4.5rem !important;
 }
 .ml-10 {
-  margin-left: 5rem;
+  margin-left: 5rem !important;
 }
 .ml-11 {
-  margin-left: 5.5rem;
+  margin-left: 5.5rem !important;
 }
 .ml-12 {
-  margin-left: 6rem;
+  margin-left: 6rem !important;
 }
 .ml-13 {
-  margin-left: 6.5rem;
+  margin-left: 6.5rem !important;
 }
 .ml-14 {
-  margin-left: 7rem;
+  margin-left: 7rem !important;
 }
 .ml-15 {
-  margin-left: 7.5rem;
+  margin-left: 7.5rem !important;
 }
 .ml-16 {
-  margin-left: 8rem;
+  margin-left: 8rem !important;
 }
 .ml-17 {
-  margin-left: 8.5rem;
+  margin-left: 8.5rem !important;
 }
 .ml-18 {
-  margin-left: 9rem;
+  margin-left: 9rem !important;
 }
 .ml-19 {
-  margin-left: 9.5rem;
+  margin-left: 9.5rem !important;
 }
 .ml-20 {
-  margin-left: 10rem;
+  margin-left: 10rem !important;
 }
 .my-1 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-top: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
 }
 .my-2 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
 }
 .my-3 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-top: 1.5rem !important;
+  margin-bottom: 1.5rem !important;
 }
 .my-4 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 2rem !important;
+  margin-bottom: 2rem !important;
 }
 .my-5 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
+  margin-top: 2.5rem !important;
+  margin-bottom: 2.5rem !important;
 }
 .my-6 {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
 }
 .my-7 {
-  margin-top: 3.5rem;
-  margin-bottom: 3.5rem;
+  margin-top: 3.5rem !important;
+  margin-bottom: 3.5rem !important;
 }
 .my-8 {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
+  margin-top: 4rem !important;
+  margin-bottom: 4rem !important;
 }
 .my-9 {
-  margin-top: 4.5rem;
-  margin-bottom: 4.5rem;
+  margin-top: 4.5rem !important;
+  margin-bottom: 4.5rem !important;
 }
 .my-10 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-top: 5rem !important;
+  margin-bottom: 5rem !important;
 }
 .my-11 {
-  margin-top: 5.5rem;
-  margin-bottom: 5.5rem;
+  margin-top: 5.5rem !important;
+  margin-bottom: 5.5rem !important;
 }
 .my-12 {
-  margin-top: 6rem;
-  margin-bottom: 6rem;
+  margin-top: 6rem !important;
+  margin-bottom: 6rem !important;
 }
 .my-13 {
-  margin-top: 6.5rem;
-  margin-bottom: 6.5rem;
+  margin-top: 6.5rem !important;
+  margin-bottom: 6.5rem !important;
 }
 .my-14 {
-  margin-top: 7rem;
-  margin-bottom: 7rem;
+  margin-top: 7rem !important;
+  margin-bottom: 7rem !important;
 }
 .my-15 {
-  margin-top: 7.5rem;
-  margin-bottom: 7.5rem;
+  margin-top: 7.5rem !important;
+  margin-bottom: 7.5rem !important;
 }
 .my-16 {
-  margin-top: 8rem;
-  margin-bottom: 8rem;
+  margin-top: 8rem !important;
+  margin-bottom: 8rem !important;
 }
 .my-17 {
-  margin-top: 8.5rem;
-  margin-bottom: 8.5rem;
+  margin-top: 8.5rem !important;
+  margin-bottom: 8.5rem !important;
 }
 .my-18 {
-  margin-top: 9rem;
-  margin-bottom: 9rem;
+  margin-top: 9rem !important;
+  margin-bottom: 9rem !important;
 }
 .my-19 {
-  margin-top: 9.5rem;
-  margin-bottom: 9.5rem;
+  margin-top: 9.5rem !important;
+  margin-bottom: 9.5rem !important;
 }
 .my-20 {
-  margin-top: 10rem;
-  margin-bottom: 10rem;
+  margin-top: 10rem !important;
+  margin-bottom: 10rem !important;
 }
 .mx-1 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+  margin-left: 0.5rem !important;
+  margin-right: 0.5rem !important;
 }
 .mx-2 {
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin-left: 1rem !important;
+  margin-right: 1rem !important;
 }
 .mx-3 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+  margin-left: 1.5rem !important;
+  margin-right: 1.5rem !important;
 }
 .mx-4 {
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin-left: 2rem !important;
+  margin-right: 2rem !important;
 }
 .mx-5 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+  margin-left: 2.5rem !important;
+  margin-right: 2.5rem !important;
 }
 .mx-6 {
-  margin-left: 3rem;
-  margin-right: 3rem;
+  margin-left: 3rem !important;
+  margin-right: 3rem !important;
 }
 .mx-7 {
-  margin-left: 3.5rem;
-  margin-right: 3.5rem;
+  margin-left: 3.5rem !important;
+  margin-right: 3.5rem !important;
 }
 .mx-8 {
-  margin-left: 4rem;
-  margin-right: 4rem;
+  margin-left: 4rem !important;
+  margin-right: 4rem !important;
 }
 .mx-9 {
-  margin-left: 4.5rem;
-  margin-right: 4.5rem;
+  margin-left: 4.5rem !important;
+  margin-right: 4.5rem !important;
 }
 .mx-10 {
-  margin-left: 5rem;
-  margin-right: 5rem;
+  margin-left: 5rem !important;
+  margin-right: 5rem !important;
 }
 .mx-11 {
-  margin-left: 5.5rem;
-  margin-right: 5.5rem;
+  margin-left: 5.5rem !important;
+  margin-right: 5.5rem !important;
 }
 .mx-12 {
-  margin-left: 6rem;
-  margin-right: 6rem;
+  margin-left: 6rem !important;
+  margin-right: 6rem !important;
 }
 .mx-13 {
-  margin-left: 6.5rem;
-  margin-right: 6.5rem;
+  margin-left: 6.5rem !important;
+  margin-right: 6.5rem !important;
 }
 .mx-14 {
-  margin-left: 7rem;
-  margin-right: 7rem;
+  margin-left: 7rem !important;
+  margin-right: 7rem !important;
 }
 .mx-15 {
-  margin-left: 7.5rem;
-  margin-right: 7.5rem;
+  margin-left: 7.5rem !important;
+  margin-right: 7.5rem !important;
 }
 .mx-16 {
-  margin-left: 8rem;
-  margin-right: 8rem;
+  margin-left: 8rem !important;
+  margin-right: 8rem !important;
 }
 .mx-17 {
-  margin-left: 8.5rem;
-  margin-right: 8.5rem;
+  margin-left: 8.5rem !important;
+  margin-right: 8.5rem !important;
 }
 .mx-18 {
-  margin-left: 9rem;
-  margin-right: 9rem;
+  margin-left: 9rem !important;
+  margin-right: 9rem !important;
 }
 .mx-19 {
-  margin-left: 9.5rem;
-  margin-right: 9.5rem;
+  margin-left: 9.5rem !important;
+  margin-right: 9.5rem !important;
 }
 .mx-20 {
-  margin-left: 10rem;
-  margin-right: 10rem;
+  margin-left: 10rem !important;
+  margin-right: 10rem !important;
 }
