--- a/v2/padding.css
+++ b/v2/padding.css
@@ -1,460 +1,460 @@
 .p-1 {
-  padding: 0.5rem;
+  padding: 0.5rem !important;
 }
 .p-2 {
-  padding: 1rem;
+  padding: 1rem !important;
 }
 .p-3 {
-  padding: 1.5rem;
+  padding: 1.5rem !important;
 }
 .p-4 {
-  padding: 2rem;
+  padding: 2rem !important;
 }
 .p-5 {
-  padding: 2.5rem;
+  padding: 2.5rem !important;
 }
 .p-6 {
-  padding: 3rem;
+  padding: 3rem !important;
 }
 .p-7 {
-  padding: 3.5rem;
+  padding: 3.5rem !important;
 }
 .p-8 {
-  padding: 4rem;
+  padding: 4rem !important;
 }
 .p-9 {
-  padding: 4.5rem;
+  padding: 4.5rem !important;
 }
 .p-10 {
-  padding: 5rem;
+  padding: 5rem !important;
 }
 .p-11 {
-  padding: 5.5rem;
+  padding: 5.5rem !important;
 }
 .p-12 {
-  padding: 6rem;
+  padding: 6rem !important;
 }
 .p-13 {
-  padding: 6.5rem;
+  padding: 6.5rem !important;
 }
 .p-14 {
-  padding: 7rem;
+  padding: 7rem !important;
 }
 .p-15 {
-  padding: 7.5rem;
+  padding: 7.5rem !important;
 }
 .p-16 {
-  padding: 8rem;
+  padding: 8rem !important;
 }
 .p-17 {
-  padding: 8.5rem;
+  padding: 8.5rem !important;
 }
 .p-18 {
-  padding: 9rem;
+  padding: 9rem !important;
 }
 .p-19 {
-  padding: 9.5rem;
+  padding: 9.5rem !important;
 }
 .p-20 {
-  padding: 10rem;
+  padding: 10rem !important;
 }
 .pt-1 {
-  padding-top: 0.5rem;
+  padding-top: 0.5rem !important;
 }
 .pt-2 {
-  padding-top: 1rem;
+  padding-top: 1rem !important;
 }
 .pt-3 {
-  padding-top: 1.5rem;
+  padding-top: 1.5rem !important;
 }
 .pt-4 {
-  padding-top: 2rem;
+  padding-top: 2rem !important;
 }
 .pt-5 {
-  padding-top: 2.5rem;
+  padding-top: 2.5rem !important;
 }
 .pt-6 {
-  padding-top: 3rem;
+  padding-top: 3rem !important;
 }
 .pt-7 {
-  padding-top: 3.5rem;
+  padding-top: 3.5rem !important;
 }
 .pt-8 {
-  padding-top: 4rem;
+  padding-top: 4rem !important;
 }
 .pt-9 {
-  padding-top: 4.5rem;
+  padding-top: 4.5rem !important;
 }
 .pt-10 {
-  padding-top: 5rem;
+  padding-top: 5rem !important;
 }
 .pt-11 {
-  padding-top: 5.5rem;
+  padding-top: 5.5rem !important;
 }
 .pt-12 {
-  padding-top: 6rem;
+  padding-top: 6rem !important;
 }
 .pt-13 {
-  padding-top: 6.5rem;
+  padding-top: 6.5rem !important;
 }
 .pt-14 {
-  padding-top: 7rem;
+  padding-top: 7rem !important;
 }
 .pt-15 {
-  padding-top: 7.5rem;
+  padding-top: 7.5rem !important;
 }
 .pt-16 {
-  padding-top: 8rem;
+  padding-top: 8rem !important;
 }
 .pt-17 {
-  padding-top: 8.5rem;
+  padding-top: 8.5rem !important;
 }
 .pt-18 {
-  padding-top: 9rem;
+  padding-top: 9rem !important;
 }
 .pt-19 {
-  padding-top: 9.5rem;
+  padding-top: 9.5rem !important;
 }
 .pt-20 {
-  padding-top: 10rem;
+  padding-top: 10rem !important;
 }
 .pb-1 {
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.5rem !important;
 }
 .pb-2 {
-  padding-bottom: 1rem;
+  padding-bottom: 1rem !important;
 }
 .pb-3 {
-  padding-bottom: 1.5rem;
+  padding-bottom: 1.5rem !important;
 }
 .pb-4 {
-  padding-bottom: 2rem;
+  padding-bottom: 2rem !important;
 }
 .pb-5 {
-  padding-bottom: 2.5rem;
+  padding-bottom: 2.5rem !important;
 }
 .pb-6 {
-  padding-bottom: 3rem;
+  padding-bottom: 3rem !important;
 }
 .pb-7 {
-  padding-bottom: 3.5rem;
+  padding-bottom: 3.5rem !important;
 }
 .pb-8 {
-  padding-bottom: 4rem;
+  padding-bottom: 4rem !important;
 }
 .pb-9 {
-  padding-bottom: 4.5rem;
+  padding-bottom: 4.5rem !important;
 }
 .pb-10 {
-  padding-bottom: 5rem;
+  padding-bottom: 5rem !important;
 }
 .pb-11 {
-  padding-bottom: 5.5rem;
+  padding-bottom: 5.5rem !important;
 }
 .pb-12 {
-  padding-bottom: 6rem;
+  padding-bottom: 6rem !important;
 }
 .pb-13 {
-  padding-bottom: 6.5rem;
+  padding-bottom: 6.5rem !important;
 }
 .pb-14 {
-  padding-bottom: 7rem;
+  padding-bottom: 7rem !important;
 }
 .pb-15 {
-  padding-bottom: 7.5rem;
+  padding-bottom: 7.5rem !important;
 }
 .pb-16 {
-  padding-bottom: 8rem;
+  padding-bottom: 8rem !important;
 }
 .pb-17 {
-  padding-bottom: 8.5rem;
+  padding-bottom: 8.5rem !important;
 }
 .pb-18 {
-  padding-bottom: 9rem;
+  padding-bottom: 9rem !important;
 }
 .pb-19 {
-  padding-bottom: 9.5rem;
+  padding-bottom: 9.5rem !important;
 }
 .pb-20 {
-  padding-bottom: 10rem;
+  padding-bottom: 10rem !important;
 }
 .pr-1 {
-  padding-right: 0.5rem;
+  padding-right: 0.5rem !important;
 }
 .pr-2 {
-  padding-right: 1rem;
+  padding-right: 1rem !important;
 }
 .pr-3 {
-  padding-right: 1.5rem;
+  padding-right: 1.5rem !important;
 }
 .pr-4 {
-  padding-right: 2rem;
+  padding-right: 2rem !important;
 }
 .pr-5 {
-  padding-right: 2.5rem;
+  padding-right: 2.5rem !important;
 }
 .pr-6 {
-  padding-right: 3rem;
+  padding-right: 3rem !important;
 }
 .pr-7 {
-  padding-right: 3.5rem;
+  padding-right: 3.5rem !important;
 }
 .pr-8 {
-  padding-right: 4rem;
+  padding-right: 4rem !important;
 }
 .pr-9 {
-  padding-right: 4.5rem;
+  padding-right: 4.5rem !important;
 }
 .pr-10 {
-  padding-right: 5rem;
+  padding-right: 5rem !important;
 }
 .pr-11 {
-  padding-right: 5.5rem;
+  padding-right: 5.5rem !important;
 }
 .pr-12 {
-  padding-right: 6rem;
+  padding-right: 6rem !important;
 }
 .pr-13 {
-  padding-right: 6.5rem;
+  padding-right: 6.5rem !important;
 }
 .pr-14 {
-  padding-right: 7rem;
+  padding-right: 7rem !important;
 }
 .pr-15 {
-  padding-right: 7.5rem;
+  padding-right: 7.5rem !important;
 }
 .pr-16 {
-  padding-right: 8rem;
+  padding-right: 8rem !important;
 }
 .pr-17 {
-  padding-right: 8.5rem;
+  padding-right: 8.5rem !important;
 }
 .pr-18 {
-  padding-right: 9rem;
+  padding-right: 9rem !important;
 }
 .pr-19 {
-  padding-right: 9.5rem;
+  padding-right: 9.5rem !important;
 }
 .pr-20 {
-  padding-right: 10rem;
+  padding-right: 10rem !important;
 }
 .pl-1 {
-  padding-left: 0.5rem;
+  padding-left: 0.5rem !important;
 }
 .pl-2 {
-  padding-left: 1rem;
+  padding-left: 1rem !important;
 }
 .pl-3 {
-  padding-left: 1.5rem;
+  padding-left: 1.5rem !important;
 }
 .pl-4 {
-  padding-left: 2rem;
+  padding-left: 2rem !important;
 }
 .pl-5 {
-  padding-left: 2.5rem;
+  padding-left: 2.5rem !important;
 }
 .pl-6 {
-  padding-left: 3rem;
+  padding-left: 3rem !important;
 }
 .pl-7 {
-  padding-left: 3.5rem;
+  padding-left: 3.5rem !important;
 }
 .pl-8 {
-  padding-left: 4rem;
+  padding-left: 4rem !important;
 }
 .pl-9 {
-  padding-left: 4.5rem;
+  padding-left: 4.5rem !important;
 }
 .pl-10 {
-  padding-left: 5rem;
+  padding-left: 5rem !important;
 }
 .pl-11 {
-  padding-left: 5.5rem;
+  padding-left: 5.5rem !important;
 }
 .pl-12 {
-  padding-left: 6rem;
+  padding-left: 6rem !important;
 }
 .pl-13 {
-  padding-left: 6.5rem;
+  padding-left: 6.5rem !important;
 }
 .pl-14 {
-  padding-left: 7rem;
+  padding-left: 7rem !important;
 }
 .pl-15 {
-  padding-left: 7.5rem;
+  padding-left: 7.5rem !important;
 }
 .pl-16 {
-  padding-left: 8rem;
+  padding-left: 8rem !important;
 }
 .pl-17 {
-  padding-left: 8.5rem;
+  padding-left: 8.5rem !important;
 }
 .pl-18 {
-  padding-left: 9rem;
+  padding-left: 9rem !important;
 }
 .pl-19 {
-  padding-left: 9.5rem;
+  padding-left: 9.5rem !important;
 }
 .pl-20 {
-  padding-left: 10rem;
+  padding-left: 10rem !important;
 }
 .py-1 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
 }
 .py-2 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
 }
 .py-3 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  padding-top: 1.5rem !important;
+  padding-bottom: 1.5rem !important;
 }
 .py-4 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important;
 }
 .py-5 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+  padding-top: 2.5rem !important;
+  padding-bottom: 2.5rem !important;
 }
 .py-6 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 3rem !important;
+  padding-bottom: 3rem !important;
 }
 .py-7 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
+  padding-top: 3.5rem !important;
+  padding-bottom: 3.5rem !important;
 }
 .py-8 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 4rem !important;
+  padding-bottom: 4rem !important;
 }
 .py-9 {
-  padding-top: 4.5rem;
-  padding-bottom: 4.5rem;
+  padding-top: 4.5rem !important;
+  padding-bottom: 4.5rem !important;
 }
 .py-10 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 5rem !important;
+  padding-bottom: 5rem !important;
 }
 .py-11 {
-  padding-top: 5.5rem;
-  padding-bottom: 5.5rem;
+  padding-top: 5.5rem !important;
+  padding-bottom: 5.5rem !important;
 }
 .py-12 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 6rem !important;
+  padding-bottom: 6rem !important;
 }
 .py-13 {
-  padding-top: 6.5rem;
-  padding-bottom: 6.5rem;
+  padding-top: 6.5rem !important;
+  padding-bottom: 6.5rem !important;
 }
 .py-14 {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
+  padding-top: 7rem !important;
+  padding-bottom: 7rem !important;
 }
 .py-15 {
-  padding-top: 7.5rem;
-  padding-bottom: 7.5rem;
+  padding-top: 7.5rem !important;
+  padding-bottom: 7.5rem !important;
 }
 .py-16 {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding-top: 8rem !important;
+  padding-bottom: 8rem !important;
 }
 .py-17 {
-  padding-top: 8.5rem;
-  padding-bottom: 8.5rem;
+  padding-top: 8.5rem !important;
+  padding-bottom: 8.5rem !important;
 }
 .py-18 {
-  padding-top: 9rem;
-  padding-bottom: 9rem;
+  padding-top: 9rem !important;
+  padding-bottom: 9rem !important;
 }
 .py-19 {
-  padding-top: 9.5rem;
-  padding-bottom: 9.5rem;
+  padding-top: 9.5rem !important;
+  padding-bottom: 9.5rem !important;
 }
 .py-20 {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+  padding-top: 10rem !important;
+  padding-bottom: 10rem !important;
 }
 .px-1 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important;
 }
 .px-2 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
 }
 .px-3 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
 }
 .px-4 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
 }
 .px-5 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+  padding-left: 2.5rem !important;
+  padding-right: 2.5rem !important;
 }
 .px-6 {
-  padding-left: 3rem;
-  padding-right: 3rem;
+  padding-left: 3rem !important;
+  padding-right: 3rem !important;
 }
 .px-7 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
+  padding-left: 3.5rem !important;
+  padding-right: 3.5rem !important;
 }
 .px-8 {
-  padding-left: 4rem;
-  padding-right: 4rem;
+  padding-left: 4rem !important;
+  padding-right: 4rem !important;
 }
 .px-9 {
-  padding-left: 4.5rem;
-  padding-right: 4.5rem;
+  padding-left: 4.5rem !important;
+  padding-right: 4.5rem !important;
 }
 .px-10 {
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding-left: 5rem !important;
+  padding-right: 5rem !important;
 }
 .px-11 {
-  padding-left: 5.5rem;
-  padding-right: 5.5rem;
+  padding-left: 5.5rem !important;
+  padding-right: 5.5rem !important;
 }
 .px-12 {
-  padding-left: 6rem;
-  padding-right: 6rem;
+  padding-left: 6rem !important;
+  padding-right: 6rem !important;
 }
 .px-13 {
-  padding-left: 6.5rem;
-  padding-right: 6.5rem;
+  padding-left: 6.5rem !important;
+  padding-right: 6.5rem !important;
 }
 .px-14 {
-  padding-left: 7rem;
-  padding-right: 7rem;
+  padding-left: 7rem !important;
+  padding-right: 7rem !important;
 }
 .px-15 {
-  padding-left: 7.5rem;
-  padding-right: 7.5rem;
+  padding-left: 7.5rem !important;
+  padding-right: 7.5rem !important;
 }
 .px-16 {
-  padding-left: 8rem;
-  padding-right: 8rem;
+  padding-left: 8rem !important;
+  padding-right: 8rem !important;
 }
 .px-17 {
-  padding-left: 8.5rem;
-  padding-right: 8.5rem;
+  padding-left: 8.5rem !important;
+  padding-right: 8.5rem !important;
 }
 .px-18 {
-  padding-left: 9rem;
-  padding-right: 9rem;
+  padding-left: 9rem !important;
+  padding-right: 9rem !important;
 }
 .px-19 {
-  padding-left: 9.5rem;
-  padding-right: 9.5rem;
+  padding-left: 9.5rem !important;
+  padding-right: 9.5rem !important;
 }
 .px-20 {
-  padding-left: 10rem;
-  padding-right: 10rem;
+  padding-left: 10rem !important;
+  padding-right: 10rem !important;
 }
