--- a/v2/flex.css
+++ b/v2/flex.css
@@ -20,6 +20,15 @@
 .jc-sa {
   justify-content: space-around !important;
 }
+.ai-b{
+  align-items: baseline;
+}
+.ai-c{
+  align-items: center;
+}
+.ai-e{
+  align-items: end;
+}
 
 .flex-wrap {
   flex-wrap: wrap !important;
