--- a/v2/text.css
+++ b/v2/text.css
@@ -1,234 +1,230 @@
-.text-size-1 {
+.fs-1 {
   font-size: 0.75rem;
 }
-.text-size-2 {
+.fs-2 {
   font-size: 1rem;
 }
-.text-size-3 {
+.fs-3 {
   font-size: 1.25rem;
 }
-.text-size-4 {
+.fs-4 {
   font-size: 1.5rem;
 }
-.text-size-5 {
+.fs-5 {
   font-size: 1.75rem;
 }
-.text-size-6 {
+.fs-6 {
   font-size: 2rem;
 }
-.text-size-7 {
+.fs-7 {
   font-size: 2.25rem;
 }
-.text-size-8 {
+.fs-8 {
   font-size: 2.5rem;
 }
-.text-size-9 {
+.fs-9 {
   font-size: 2.75rem;
 }
-.text-size-10 {
+.fs-10 {
   font-size: 3rem;
 }
-.text-size-11 {
+.fs-11 {
   font-size: 3.25rem;
 }
-.text-size-12 {
+.fs-12 {
   font-size: 3.5rem;
 }
-.text-size-13 {
+.fs-13 {
   font-size: 3.75rem;
 }
-.text-size-14 {
+.fs-14 {
   font-size: 4rem;
 }
-.text-size-15 {
+.fs-15 {
   font-size: 4.25rem;
 }
-.text-size-16 {
+.fs-16 {
   font-size: 4.5rem;
 }
-.text-size-17 {
+.fs-17 {
   font-size: 4.75rem;
 }
-.text-size-18 {
+.fs-18 {
   font-size: 5rem;
 }
-.text-size-19 {
+.fs-19 {
   font-size: 5.25rem;
 }
-.text-size-20 {
+.fs-20 {
   font-size: 5.5rem;
 }
-.text-size-21 {
+.fs-21 {
   font-size: 5.75rem;
 }
-.text-size-22 {
+.fs-22 {
   font-size: 6rem;
 }
-.text-size-23 {
+.fs-23 {
   font-size: 6.25rem;
 }
-.text-size-24 {
+.fs-24 {
   font-size: 6.5rem;
 }
 
-.text-weight-lighter {
+.fw-l {
   font-weight: lighter;
 }
-.text-weight-bold {
+.fw-b {
   font-weight: bold;
 }
-.text-weight-normal {
+.fw-n {
   font-weight: normal;
 }
 
-.text-family-serif {
+.ff-serif {
   font-family: "Times New Roman", Times, serif;
 }
-.text-family-sans-serif {
+.ff-sans-serif {
   font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
 }
-.text-family-monospace {
+.ff-monospace {
   font-family: "Courier New", Courier, monospace;
 }
-.text-family-fantasy {
+.ff-fantasy {
   font-family: "Comic Sans MS", "Papyrus", fantasy, cursive, sans-serif;
 }
-.text-family-code {
+.ff-code {
   font-family: "Courier New", Courier, monospace;
 }
-.text-family-handwriting {
+.ff-handwriting {
   font-family: "Lucida Handwriting", "Courier New", Courier, cursive, monospace;
 }
-.text-family-modern {
+.ff-modern {
   font-family: "Roboto", "Segoe UI", Tahoma, Geneva, sans-serif;
 }
 
-.text-start {
+.ta-s {
   text-align: left;
 }
-.text-end {
+.ta-e {
   text-align: right;
 }
-.text-center {
+.ta-c {
   text-align: center;
 }
-.text-unset {
+.ta-u {
   text-align: unset;
 }
-.text-inherit {
+.ta-i {
   text-align: inherit;
 }
 
-.text-none {
+.td-n {
   text-decoration: none;
 }
-.text-underline {
+.td-u {
   text-decoration: underline;
 }
-.text-line-through {
+.td-lt {
   text-decoration: line-through;
 }
-.text-overline {
+.td-o {
   text-decoration: overline;
 }
 
-.text-lowercase {
+.tt-l {
   text-transform: lowercase;
 }
-.text-uppercase {
+.tt-u {
   text-transform: uppercase;
 }
-.text-capitalize {
+.tt-c {
   text-transform: capitalize;
 }
 
-.text-wrap {
+.ws-w {
   white-space: normal;
 }
-.text-nowrap {
+.ws-n {
   white-space: nowrap;
 }
-.text-break {
-  word-wrap: break-word;
-  word-break: break-word;
-}
 
-.text-truncate {
+.tt-1 {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.text-truncate-2 {
+.tt-2 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.text-truncate-3 {
+.tt-3 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.text-truncate-4 {
+.tt-4 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 4;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.text-truncate-5 {
+.tt-5 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 5;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.text-truncate-6 {
+.tt-6 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 6;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.text-truncate-7 {
+.tt-7 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 7;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.text-truncate-8 {
+.tt-8 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 8;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.text-truncate-9 {
+.tt-9 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 9;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.text-truncate-10 {
+.tt-10 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 10;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.text-truncate-11 {
+.tt-11 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 11;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.text-truncate-12 {
+.tt-12 {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 12;
