--- a/v2/text.css
+++ b/v2/text.css
@@ -143,10 +143,22 @@
 }
 
 .ws-w {
-  white-space: normal;
+  white-space: wrap;
 }
 .ws-n {
   white-space: nowrap;
+}
+.ws-p {
+  white-space: pre;
+}
+.ws-pw {
+  white-space: pre-wrap;
+}
+.ws-pl {
+  white-space: pre-line;
+}
+.ws-bs {
+  white-space: break-spaces;
 }
 
 .tt-1 {
